// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`1. todo.onPull >  (deep) 1`] = `
[
  <h1>
    To-do List
  </h1>,
  <form
    onSubmit={[Function]}
  >
    <input
      onInput={[Function]}
      placeholder="New Todo"
      type="text"
      value=""
    />
    <button
      className="btn"
      type="submit"
    >
      Create
    </button>
  </form>,
]
`;

exports[`1. todo.onPull > $stan changes 1`] = `
{
  "todo": {
    "filtered": {
      "0": {
        "done": false,
        "id": "pqRxsRzfIvfPhyL1Ol7cb",
        "text": "read",
      },
      "1": {
        "done": true,
        "id": "XONBkwGngyqr60paySNfs",
        "text": "buy milk",
      },
      "2": {
        "id": "yFtPqsesTs2Q6IcJS3-cG",
        "text": "buy meat",
      },
    },
    "map": {
      "XONBkwGngyqr60paySNfs": {
        "done": false,
        "id": "XONBkwGngyqr60paySNfs",
        "text": "buy milk",
      },
      "pqRxsRzfIvfPhyL1Ol7cb": {
        "done": false,
        "id": "pqRxsRzfIvfPhyL1Ol7cb",
        "text": "read",
      },
      "yFtPqsesTs2Q6IcJS3-cG": {
        "id": "yFtPqsesTs2Q6IcJS3-cG",
        "text": "buy meat",
      },
    },
  },
}
`;

exports[`2. todo.onToggle >  (deep) 1`] = `
[
  <h1>
    To-do List
  </h1>,
  <form
    onSubmit={[Function]}
  >
    <input
      onInput={[Function]}
      placeholder="New Todo"
      type="text"
      value=""
    />
    <button
      className="btn"
      type="submit"
    >
      Create
    </button>
  </form>,
  <input
    checked={false}
    onChange={[Function]}
    type="checkbox"
  />,
  "Hide completed",
  <button
    className="btn"
    disabled={false}
    onClick={[Function]}
  >
    Remove completed
  </button>,
  <ul>
    <li
      className=""
    >
      <input
        checked={false}
        onChange={[Function]}
        type="checkbox"
      />
      read
       
      <button
        onClick={[Function]}
      >
        ☠
      </button>
    </li>
    <li
      className="line-through"
    >
      <input
        checked={true}
        onChange={[Function]}
        type="checkbox"
      />
      buy milk
       
      <button
        onClick={[Function]}
      >
        ☠
      </button>
    </li>
    <li
      className=""
    >
      <input
        checked={false}
        onChange={[Function]}
        type="checkbox"
      />
      buy meat
       
      <button
        onClick={[Function]}
      >
        ☠
      </button>
    </li>
  </ul>,
]
`;

exports[`2. todo.onToggle > $stan changes 1`] = `
{
  "todo": {
    "map": {
      "XONBkwGngyqr60paySNfs": {
        "done": true,
      },
    },
  },
}
`;

exports[`3. todo.onFilter >  (deep) 1`] = `
[
  <h1>
    To-do List
  </h1>,
  <form
    onSubmit={[Function]}
  >
    <input
      onInput={[Function]}
      placeholder="New Todo"
      type="text"
      value=""
    />
    <button
      className="btn"
      type="submit"
    >
      Create
    </button>
  </form>,
]
`;

exports[`3. todo.onFilter > $stan changes 1`] = `
{
  "todo": {
    "filter": "!done",
    "filtered": {
      "1": {
        "done": undefined,
        "id": "yFtPqsesTs2Q6IcJS3-cG",
        "text": "buy meat",
      },
      "2": undefined,
    },
  },
}
`;

exports[`4. todo.onDeleteDone >  (deep) 1`] = `
[
  <h1>
    To-do List
  </h1>,
  <form
    onSubmit={[Function]}
  >
    <input
      onInput={[Function]}
      placeholder="New Todo"
      type="text"
      value=""
    />
    <button
      className="btn"
      type="submit"
    >
      Create
    </button>
  </form>,
  <input
    checked={true}
    onChange={[Function]}
    type="checkbox"
  />,
  "Hide completed",
  <button
    className="btn"
    disabled={true}
    onClick={[Function]}
  >
    Remove completed
  </button>,
  <ul>
    <li
      className=""
    >
      <input
        checked={false}
        onChange={[Function]}
        type="checkbox"
      />
      read
       
      <button
        onClick={[Function]}
      >
        ☠
      </button>
    </li>
    <li
      className=""
    >
      <input
        checked={false}
        onChange={[Function]}
        type="checkbox"
      />
      buy meat
       
      <button
        onClick={[Function]}
      >
        ☠
      </button>
    </li>
  </ul>,
]
`;

exports[`4. todo.onDeleteDone > $stan changes 1`] = `
{
  "todo": {
    "map": {
      "XONBkwGngyqr60paySNfs": undefined,
    },
  },
}
`;

exports[`5. todo.onFilter >  (deep) 1`] = `
[
  <h1>
    To-do List
  </h1>,
  <form
    onSubmit={[Function]}
  >
    <input
      onInput={[Function]}
      placeholder="New Todo"
      type="text"
      value=""
    />
    <button
      className="btn"
      type="submit"
    >
      Create
    </button>
  </form>,
]
`;

exports[`5. todo.onFilter > $stan changes 1`] = `
{
  "todo": {
    "filter": "",
  },
}
`;

exports[`6. todo.onDelete >  (deep) 1`] = `
[
  <h1>
    To-do List
  </h1>,
  <form
    onSubmit={[Function]}
  >
    <input
      onInput={[Function]}
      placeholder="New Todo"
      type="text"
      value=""
    />
    <button
      className="btn"
      type="submit"
    >
      Create
    </button>
  </form>,
  <input
    checked={false}
    onChange={[Function]}
    type="checkbox"
  />,
  "Hide completed",
  <button
    className="btn"
    disabled={true}
    onClick={[Function]}
  >
    Remove completed
  </button>,
  <ul>
    <li
      className=""
    >
      <input
        checked={false}
        onChange={[Function]}
        type="checkbox"
      />
      read
       
      <button
        onClick={[Function]}
      >
        ☠
      </button>
    </li>
  </ul>,
]
`;

exports[`6. todo.onDelete > $stan changes 1`] = `
{
  "todo": {
    "filtered": {
      "1": undefined,
    },
    "map": {
      "yFtPqsesTs2Q6IcJS3-cG": undefined,
    },
  },
}
`;
